fixed viewport on mobile

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -139,7 +139,7 @@ div.about-person img {
 footer {
     margin-top: 2em;
     padding: 1em;
-    background-color: #f5f5f5;
+    background-color: #ccc;
     text-align: center;
 }
 
